feat: rename path to file in CocktailPhotoWithIDInRequest and modify required status
